common/src/main/webapp/less/style.less
/* ... */
.aladin-container-body {
  grid-area: aladin;
  margin-bottom: 0.2em;
}

.aladin-status-fov {
  grid-area: fov;
  justify-self: stretch;
  align-self: center;
}

.aladin-status-current-coordinates {
  grid-area: curr;
  justify-self: end;
  align-self: center;
}

.aladin-status-center-button {
  grid-area: center;
  align-self: center;
}

.aladin-detail-text {
  color: white;
}

.aladin-search-icon {
  align-self: center;
  margin-left: 0.5em;
}

.moon-phase {
  position: absolute;
  top: 5px;
  right: 1rem;
  z-index: 10;
}

.connection-ok {
  color: greenyellow;
}

.connection-warning {
  color: gold;
}

.connection-error {
  color: red;
}

.wip {
  position: relative;
  display: inline-block;
}

.wip .wip-warning {
  visibility: hidden;
  width: 120px;
  background-color: yellow;
  color: black;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 3;
  top: 30px;
  left: calc(50% - 60px);
}

.wip:hover .wip-warning {
  visibility: visible;
}

.edit-warning {
  padding: 5px !important; // important to override SUI's style.
  position: absolute !important; // important to override SUI's style.
  z-index: 99999;
  width: 100%;
}

// The Target Position layout
@target-grid-responsive-cutoff: 992px;
@mobile-responsive-cutoff: 670px;

.target-form {
  grid-template-columns: [label] minmax(100px, 1fr) [field] 6fr;
  justify-items: stretch;
}

.target-search-form {
  grid-column: 1 / span 2;
  display: grid;
  grid-template-columns: [label] minmax(100px, 1fr) [field] 6fr;
  grid-gap: 0.3em;

  .field {
    margin-bottom: 0 !important;
  }
}

.target-grid {
  display: grid;
  grid-gap: 1em;
  padding: 0.5em;
}

.target-skyplot-cell {
  margin: 0 1em 1em;
  position: relative;
  min-width: 1px; // Needed to help highcharts recompute width on the fly.
}

.tile-xl-width,
.tile-lg-width,
.tile-md-width {
  .target-grid {
    grid-template-columns: repeat(auto-fit, minmax(40ch, 1fr));
  }

  @supports (grid-template-rows: masonry) {
    .target-grid {
      grid-template-rows: masonry;
    }
  }

  .target-aladin-cell {
    grid-row: span 3;
    max-height: 500px;
  }

  .target-skyplot-cell {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}

.target-rv-controls {
  justify-self: stretch;
}

.catalogue-form {
  height: max-content; // keep it from expanding to fill cell
}

// for the ra and dec inputs expand
.target-ra-dec-min-width {
  .ui.input {
    width: 100%;
  }
}

.error-label-mixin() {
  color: var(--negative-text-color);
  background-color: var(--negative-background-color);
}

.ui.label.explore-error-label {
  .error-label-mixin();
}

.ui.form .field > .explore-error-label {
  .error-label-mixin();
}

.ui.basic.label.explore-section-label {
  background-color: transparent;
  border: none;
  letter-spacing: 0.15em;
  border-radius: 0;
  border-bottom: 1px solid var(--input-color);
}

.explore-units-label {
  margin-left: 0.25em;
  margin-bottom: 0.2em;
}

.proposal-details-grid {
  /*
  When we go to one column, instead of interleaving
  items, we want to put the second column below the first.
  */
  @proposal-details-grid-items: 8;

  each(range(1, @proposal-details-grid-items), {
    @is-odd: boolean(mod(@value, 2) > 0);
    @odd-value: (@value + 1) / 2;
    @even-value: ceil((@value + @proposal-details-grid-items) / 2);
    @row-start: if(@is-odd, @odd-value, @even-value);

    & > *:nth-child(@{value}) {
      @media (max-width: @two-column-break) {
        grid-row-start: @row-start;
      }
    }
  });
}

.minimum-percent {
  width: 5.5em;
  padding-left: 0.5em !important;

  div& .ui.input input {
    text-align: right;
  }

  span& {
    text-align: end;
  }
}

.version {
  font-size: smaller;
  float: right;

  // CopyToClipboard
  div {
    display: inline-block;
    margin-left: 5px;
  }
}

// The split edit button and the band totals
.partner-split-data {
  &,
  div& data {
    width: 6em;
  }

  // the text only "hours".
  span& {
    text-align: end;
    padding-right: 6px; // determined empirically from dev tools
  }

  // The div containing the flag and percent text.
  data > div {
    display: flex;

    // The percent text
    span {
      flex: 1;
      text-align: end;
    }
  }
}

.version.uncopied {
  // CopyToClipboard
  div {
    cursor: pointer;
  }
}

div.partner-split-total {
  &,
  & > div > data {
    width: 5.5em;
  }

  & > div > data {
    text-align: end;
  }
}

img.partner-split-flag {
  height: 16px;
  width: 32px;
  margin-right: 0.5em;
}

.partner-splits-editor-error {
  text-align: left;
  font-size: larger;
}

// For very small tables hide the headers and add fake "header" to the left of the row
.tile-xs-width {
  .target-grid {
    grid-template-columns: 1fr;
  }

  .explore-magnitudes-container {
    .ui.table,
    thead,
    tbody,
    th,
    td,
    tr {
      // SUI already has an !important
      display: block !important;
    }

    // Hide table headers (but not display: none;, for accessibility)
    thead tr {
      position: absolute;
      top: -9999px;
      left: -9999px;
    }
  }
}

.tile-xs-height {
  .explore-magnitudes-section {
    display: none;
  }
}

.ui.table.partner-splits-editor-table {
  th:last-child,
  td:last-child,
  td:last-child > span > div {
    width: 4em;
  }

  .ui.form & input {
    text-align: right;
  }
}

// position all fields relative so that error labels position properly.
.ui .field {
  position: relative;
}

.explore-input-error-mixin() {
  left: 30%;
  z-index: 3;
}

.explore-input-error-tooltip {
  transform: translate(0, -33px);
  .explore-input-error-mixin();
}

.explore-input-error-tooltip-below {
  transform: translate(0, 20px);
  .explore-input-error-mixin();
}

.ui.button.blended-button {
  border: none;
  background-color: transparent;
  box-shadow: none;

  &:hover {
    outline: 1px var(--site-border-color) solid;
  }
}
/* ... */

